[gd_scene load_steps=23 format=4 uid="uid://bv5so1kb06vhr"]

[ext_resource type="Script" uid="uid://dm71l0y1drptf" path="res://gameplay_components/menu_controller.gd" id="1_blcso"]
[ext_resource type="Script" uid="uid://bmo5amye5tsst" path="res://gameplay_components/race_cars/game_controller.gd" id="1_dysks"]
[ext_resource type="FontFile" uid="uid://dw42h5y4rmyoq" path="res://fonts/winky_sans_reg.ttf" id="2_me88u"]
[ext_resource type="Script" uid="uid://c1yrgei3bj5pa" path="res://gameplay_components/race_cars/track.gd" id="3_ffxk0"]
[ext_resource type="Texture2D" uid="uid://dx1ox3y0f1tc1" path="res://art/car_racing/track_tiles.png" id="4_3vut7"]
[ext_resource type="Texture2D" uid="uid://ca3ds5jy5h45q" path="res://art/car_racing/car_blue.png" id="4_50asn"]
[ext_resource type="Script" uid="uid://tqnis5chbkcs" path="res://gameplay_components/race_cars/car_player.gd" id="4_ll1rr"]
[ext_resource type="Script" uid="uid://28l8nwmxats8" path="res://gameplay_components/race_cars/car_rival.gd" id="6_fcxhx"]
[ext_resource type="Texture2D" uid="uid://c1eer1wqpomld" path="res://art/car_racing/car_red.png" id="6_ll1rr"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_me88u"]
texture = ExtResource("4_3vut7")
texture_region_size = Vector2i(32, 32)
5:10/0 = 0
5:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, -10.9648, -16, -10.8632)
4:10/0 = 0
4:9/0 = 0
4:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, 16, 16, -16, 10.9648, -16, 10.8632, 16)
3:10/0 = 0
3:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, 16, 16, 16, 10.9648, -16, 10.8632)
4:11/0 = 0
4:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, -16, -16, -10.9648, -16, -10.8632, 16)
4:8/0 = 0
4:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, -16, -16, -10.162, -16, -8.72315, -2.69788, -3.32739, 5.2159, 8.90301, 11.3311, 16, 10.9714, 16, 16)
5:8/0 = 0
5:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -16, 16, -10.162, 16, -8.72315, 2.69788, -3.32739, -5.2159, 8.90301, -11.3311, 16, -10.9714, 16, -16)
5:7/0 = 0
5:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -16, 16, 16, 10.162, 16, 8.72315, 2.69788, 3.32739, -5.2159, -8.90301, -11.3311, -16, -10.9714, -16, -16)
4:7/0 = 0
4:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, 16, 16, -16, 10.162, -16, 8.72315, -2.69788, 3.32739, 5.2159, -8.90301, 11.3311, -16, 10.9714, -16, 16)
0:15/0 = 0
0:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 11.1521, 16, 10.9714, 16, 16, -16, 16)
0:16/0 = 0
0:17/0 = 0
0:17/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -11.1521, 16, -10.9714, 16, -16, -16, -16)
3:5/0 = 0
4:4/0 = 0
4:5/0 = 0
3:4/0 = 0

[sub_resource type="TileSet" id="TileSet_50asn"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/5 = SubResource("TileSetAtlasSource_me88u")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_me88u"]
size = Vector2(16, 84)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3vut7"]
radius = 11.0
height = 40.0

[sub_resource type="Curve2D" id="Curve2D_fcxhx"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 592, 160, 0, 0, 0, 0, 992, 144, 0, 0, 0, 0, 976, 512, 0, 0, 0, 0, 752, 480, 0, 0, 0, 0, 272, 512, 0, 0, 0, 0, 160, 464, 0, 0, 0, 0, 192, 144, 0, 0, 0, 0, 384, 128, 0, 0, 0, 0, 592, 160)
}
point_count = 9

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dysks"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tje41"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tje41"]
bg_color = Color(0.9, 0.243, 0.243, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_86edf"]
bg_color = Color(0.86, 0.2322, 0.2322, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dysks"]
bg_color = Color(0.9, 0.522, 0.522, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.95158, 0.95158, 0.95158, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Theme" id="Theme_86edf"]
Button/styles/disabled = SubResource("StyleBoxEmpty_dysks")
Button/styles/focus = SubResource("StyleBoxEmpty_tje41")
Button/styles/hover = SubResource("StyleBoxFlat_tje41")
Button/styles/normal = SubResource("StyleBoxFlat_86edf")
Button/styles/pressed = SubResource("StyleBoxFlat_tje41")
Panel/styles/panel = SubResource("StyleBoxFlat_dysks")

[sub_resource type="LabelSettings" id="LabelSettings_os0xr"]
font = ExtResource("2_me88u")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_dysks"]
font_size = 48

[node name="RaceCars" type="Node2D"]
script = ExtResource("1_dysks")

[node name="Track" type="Node2D" parent="."]
script = ExtResource("3_ffxk0")

[node name="TrackLayer" type="TileMapLayer" parent="Track"]
z_index = -5
texture_filter = 1
tile_map_data = PackedByteArray("AAAIAAMABQAFAAoAAAAIAAQABQAEAAoAAAAIAAUABQADAAoAAAAJAAMABQAFAAoAAAAJAAQABQAEAAoAAAAJAAUABQADAAoAAAAKAAMABQAFAAoAAAAKAAQABQAEAAoAAAAKAAUABQADAAoAAAALAAMABQAFAAoAAAALAAQABQAEAAoAAAALAAUABQADAAoAAAAMAAMABQAFAAoAAAAMAAQABQAEAAoAAAAMAAUABQADAAoAAAANAAMABQAFAAoAAAANAAQABQAEAAoAAAANAAUABQADAAoAAAAOAAMABQAFAAoAAAAOAAQABQAEAAoAAAAOAAUABQADAAoAAAAPAAMABQAFAAoAAAAPAAQABQAEAAoAAAAPAAUABQADAAoAAAAQAAMABQAFAAoAAAAQAAQABQAEAAoAAAAQAAUABQADAAoAAAARAAMABQAAABEAAAARAAQABQAAABAAAAARAAUABQAAAA8AAAASAAMABQAFAAoAAAASAAQABQAEAAoAAAASAAUABQADAAoAAAATAAMABQAFAAoAAAATAAQABQAEAAoAAAATAAUABQADAAoAAAAUAAMABQAFAAoAAAAUAAQABQAEAAoAAAAUAAUABQADAAoAAAAVAAMABQAFAAoAAAAVAAQABQAEAAoAAAAVAAUABQADAAoAAAAWAAMABQAFAAoAAAAWAAQABQAEAAoAAAAWAAUABQADAAoAAAAXAAMABQAFAAoAAAAXAAQABQAEAAoAAAAXAAUABQADAAoAAAAYAAMABQAFAAoAAAAYAAQABQAEAAoAAAAYAAUABQADAAoAAAAZAAMABQAFAAoAAAAZAAQABQAEAAoAAAAZAAUABQADAAoAAAAaAAMABQAFAAoAAAAaAAQABQAEAAoAAAAaAAUABQADAAoAAAAdAAMABQAFAAoAAAAdAAQABQAEAAoAAAAdAAUABQAEAAQAAAAdAAYABQAEAAsAAAAdAAcABQAEAAsAAAAdAAgABQAEAAsAAAAdAAkABQAEAAsAAAAdAAoABQAEAAsAAAAdAAsABQAEAAsAAAAdAAwABQAEAAsAAAAdAA0ABQAEAAsAAAAeAAMABQAFAAoAAAAeAAQABQAEAAoAAAAeAAUABQAEAAoAAAAeAAYABQAEAAoAAAAeAAcABQAEAAoAAAAeAAgABQAEAAoAAAAeAAkABQAEAAoAAAAeAAoABQAEAAoAAAAeAAsABQAEAAoAAAAeAAwABQAEAAoAAAAeAA0ABQAEAAoAAAAfAAMABQAFAAcAAAAfAAQABQAEAAkAAAAfAAUABQAEAAkAAAAfAAYABQAEAAkAAAAfAAcABQAEAAkAAAAfAAgABQAEAAkAAAAfAAkABQAEAAkAAAAfAAoABQAEAAkAAAAfAAsABQAEAAkAAAAfAAwABQAEAAkAAAAfAA0ABQAEAAkAAAAFAAMABQAFAAoAAAAFAAQABQAEAAoAAAAFAAUABQAEAAoAAAAFAAYABQAEAAoAAAAFAAcABQAEAAoAAAAFAAgABQAEAAoAAAAFAAkABQAEAAoAAAAFAAoABQAEAAoAAAAFAAsABQAEAAoAAAAFAAwABQAEAAoAAAAGAAMABQAFAAoAAAAGAAQABQAEAAoAAAAGAAUABQAEAAUAAAAGAAYABQAEAAkAAAAGAAcABQAEAAkAAAAGAAgABQAEAAkAAAAGAAkABQAEAAkAAAAGAAoABQAEAAkAAAAGAAsABQAEAAkAAAAGAAwABQAEAAkAAAAEAAMABQAFAAgAAAAEAAQABQAEAAsAAAAEAAUABQAEAAsAAAAEAAYABQAEAAsAAAAEAAcABQAEAAsAAAAEAAgABQAEAAsAAAAEAAkABQAEAAsAAAAEAAoABQAEAAsAAAAEAAsABQAEAAsAAAAEAAwABQAEAAsAAAAIAA8ABQAEAAoAAAAIABAABQADAAoAAAAJAA8ABQAEAAoAAAAJABAABQADAAoAAAAKAA8ABQAEAAoAAAAKABAABQADAAoAAAALAA8ABQAEAAoAAAALABAABQADAAoAAAAMAA8ABQAEAAoAAAAMABAABQADAAoAAAANAA8ABQAEAAoAAAANABAABQADAAoAAAAOAA8ABQAEAAoAAAAOABAABQADAAoAAAAPAA8ABQAEAAoAAAAPABAABQADAAoAAAAQAA8ABQAEAAoAAAAQABAABQADAAoAAAARAA8ABQAEAAoAAAARABAABQADAAoAAAASAA8ABQAEAAoAAAASABAABQADAAoAAAATAA8ABQAEAAoAAAATABAABQADAAoAAAAUAA8ABQAEAAoAAAAUABAABQADAAoAAAAVAA8ABQAEAAoAAAAVABAABQADAAoAAAAWAA8ABQAEAAoAAAAWABAABQADAAoAAAAXAA8ABQAEAAoAAAAXABAABQADAAoAAAAYAA8ABQAEAAoAAAAYABAABQADAAoAAAAZAA8ABQAEAAoAAAAZABAABQADAAoAAAAaAA8ABQAEAAoAAAAaABAABQADAAoAAAAIAA4ABQAFAAoAAAAJAA4ABQAFAAoAAAAKAA4ABQAFAAoAAAALAA4ABQAFAAoAAAAMAA4ABQAFAAoAAAANAA4ABQAFAAoAAAAOAA4ABQAFAAoAAAAPAA4ABQAFAAoAAAAQAA4ABQAFAAoAAAARAA4ABQAFAAoAAAASAA4ABQAFAAoAAAATAA4ABQAFAAoAAAAUAA4ABQAFAAoAAAAVAA4ABQAFAAoAAAAWAA4ABQAFAAoAAAAXAA4ABQAFAAoAAAAYAA4ABQAFAAoAAAAZAA4ABQAFAAoAAAAaAA4ABQAFAAoAAAAdAA4ABQADAAQAAAAdAA8ABQAEAAoAAAAdABAABQADAAoAAAAeAA4ABQAEAAoAAAAeAA8ABQAEAAoAAAAeABAABQADAAoAAAAfAA4ABQAEAAkAAAAfAA8ABQAEAAkAAAAfABAABQAEAAcAAAAEAA0ABQAEAAsAAAAEAA4ABQAEAAsAAAAEAA8ABQAEAAsAAAAEABAABQAEAAgAAAAFAA0ABQAEAAoAAAAFAA4ABQAEAAoAAAAFAA8ABQAEAAoAAAAFABAABQADAAoAAAAGAA0ABQAEAAkAAAAGAA4ABQADAAUAAAAGAA8ABQAEAAoAAAAGABAABQADAAoAAAAbAAMABQAFAAoAAAAbAAQABQAEAAoAAAAbAAUABQADAAoAAAAcAAMABQAFAAoAAAAcAAQABQAEAAoAAAAcAAUABQADAAoAAAAHAAMABQAFAAoAAAAHAAQABQAEAAoAAAAHAAUABQADAAoAAAAHAA4ABQAFAAoAAAAHAA8ABQAEAAoAAAAHABAABQADAAoAAAAbAA4ABQAFAAoAAAAbAA8ABQAEAAoAAAAbABAABQADAAoAAAAcAA4ABQAFAAoAAAAcAA8ABQAEAAoAAAAcABAABQADAAoAAAA=")
tile_set = SubResource("TileSet_50asn")

[node name="LapMarker" type="Area2D" parent="Track"]
position = Vector2(560, 144)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Track/LapMarker"]
shape = SubResource("RectangleShape2D_me88u")

[node name="Grass" type="CanvasLayer" parent="Track"]
layer = -10

[node name="ColorRect" type="ColorRect" parent="Track/Grass"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.22, 1, 0.402, 0.564706)

[node name="MudTimer" type="Timer" parent="Track"]
wait_time = 3.0

[node name="RaceCarPlayer" type="CharacterBody2D" parent="." groups=["car"]]
position = Vector2(592, 128)
script = ExtResource("4_ll1rr")

[node name="Sprite2D" type="Sprite2D" parent="RaceCarPlayer"]
rotation = 1.5708
scale = Vector2(0.35, 0.35)
texture = ExtResource("4_50asn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RaceCarPlayer"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_3vut7")

[node name="RaceCarRival" type="CharacterBody2D" parent="." groups=["car"]]
position = Vector2(592, 160)
rotation = -0.0399787
script = ExtResource("6_fcxhx")

[node name="Sprite2D" type="Sprite2D" parent="RaceCarRival"]
rotation = 1.5708
scale = Vector2(0.35, 0.35)
texture = ExtResource("6_ll1rr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RaceCarRival"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_3vut7")

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_fcxhx")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(592, 160)
rotation = -0.0399787

[node name="Route" type="RemoteTransform2D" parent="Path2D/PathFollow2D" groups=["route"]]
remote_path = NodePath("../../../RaceCarRival")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Menus" type="Control" parent="UI"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_86edf")
script = ExtResource("1_blcso")

[node name="Background" type="ColorRect" parent="UI/Menus"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.498039)

[node name="StartMenu" type="Control" parent="UI/Menus"]
layout_mode = 1
anchor_left = 0.311632
anchor_top = 0.197531
anchor_right = 0.688368
anchor_bottom = 0.802469
offset_right = -6.10352e-05
offset_bottom = 6.10352e-05
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="UI/Menus/StartMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dysks")

[node name="TitleLabel" type="Label" parent="UI/Menus/StartMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.252304
anchor_top = 0.0408163
anchor_right = 0.747696
anchor_bottom = 0.206633
grow_horizontal = 2
text = "Race Cars"
label_settings = SubResource("LabelSettings_os0xr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="RichTextLabel" parent="UI/Menus/StartMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.142857
anchor_top = 0.247449
anchor_right = 0.86636
anchor_bottom = 0.5
offset_bottom = -1.52588e-05
theme_override_font_sizes/normal_font_size = 20
text = "Get to three laps first."
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="UI/Menus/StartMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.308756
anchor_top = 0.647959
anchor_right = 0.691244
anchor_bottom = 0.775511
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_tje41")
theme_override_styles/normal = SubResource("StyleBoxFlat_86edf")
text = "Start"

[node name="ReturnButton" type="Button" parent="UI/Menus/StartMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.359447
anchor_top = 0.818878
anchor_right = 0.647466
anchor_bottom = 0.933674
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Return"

[node name="PauseMenu" type="Control" parent="UI/Menus"]
visible = false
layout_mode = 1
anchor_left = 0.311632
anchor_top = 0.197531
anchor_right = 0.688368
anchor_bottom = 0.802469
offset_right = -6.10352e-05
offset_bottom = 6.10352e-05
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="UI/Menus/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/Menus/PauseMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25576
anchor_top = 0.155612
anchor_right = 0.741936
anchor_bottom = 0.326531
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ExitButton" type="Button" parent="UI/Menus/PauseMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.373272
anchor_top = 0.691327
anchor_right = 0.626728
anchor_bottom = 0.795919
grow_horizontal = 2
grow_vertical = 2
text = "Exit"
metadata/_edit_use_anchors_ = true

[node name="EndMenu" type="Control" parent="UI/Menus"]
visible = false
layout_mode = 1
anchor_left = 0.311632
anchor_top = 0.197531
anchor_right = 0.688368
anchor_bottom = 0.802469
offset_right = -6.10352e-05
offset_bottom = 6.10352e-05
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="UI/Menus/EndMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="UI/Menus/EndMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.164747
anchor_top = 0.112245
anchor_right = 0.835253
anchor_bottom = 0.331633
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="QuitButton" type="Button" parent="UI/Menus/EndMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.410138
anchor_top = 0.686224
anchor_right = 0.592166
anchor_bottom = 0.765306
grow_horizontal = 2
grow_vertical = 2
text = "Quit
"
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="UI/Menus/EndMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35023
anchor_top = 0.540816
anchor_right = 0.649769
anchor_bottom = 0.647959
offset_bottom = 1.52588e-05
theme_override_font_sizes/font_size = 24
text = "Retry"
metadata/_edit_use_anchors_ = true

[node name="CountdownLabel" type="Label" parent="UI"]
visible = false
anchors_preset = -1
anchor_left = 0.337674
anchor_top = 0.432099
anchor_right = 0.650174
anchor_bottom = 0.564815
text = "Countdown"
label_settings = SubResource("LabelSettings_dysks")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="CountDownTimer" type="Timer" parent="UI/CountdownLabel"]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="Track/LapMarker" to="Track" method="_on_lap_marker_body_entered"]
[connection signal="timeout" from="Track/MudTimer" to="Track" method="_on_mud_timer_timeout"]
[connection signal="game_over" from="UI/Menus" to="UI/Menus" method="_on_game_over"]
[connection signal="start_game" from="UI/Menus" to="." method="_on_menus_start_game"]
[connection signal="pressed" from="UI/Menus/StartMenu/StartButton" to="UI/Menus" method="_on_start_button_pressed"]
[connection signal="pressed" from="UI/Menus/StartMenu/ReturnButton" to="UI/Menus" method="_on_return_button_pressed"]
[connection signal="pressed" from="UI/Menus/PauseMenu/ExitButton" to="UI/Menus" method="_on_exit_button_pressed"]
[connection signal="pressed" from="UI/Menus/EndMenu/QuitButton" to="UI/Menus" method="_on_quit_button_pressed"]
